# collar

./: .env.example  .gitignore  .notif_channel_id.json  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  rustfmt.toml  shell.nix
.github/workflows/: release.yml
src/: collar.rs  main.rs
src/collar/: commands.rs  http.rs  notifs.rs
src/collar/commands/: misc.rs  notifications.rs  petads.rs  petring.rs
